# korea-festival-api-parser

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  main.py  plan.md  pyproject.toml  shrimp-rules.md  지역기반 관광정보.txt
.github/workflows/: festival-daily.yml  sync-daily.yml
api-source/: korea-travel-api-en.json  korea-travel-api-kr.json
output/: categories.json
src/: client.py  config.py  utils.py
src/fetchers/: area_based.py  category_code.py  detail_update.py  festival.py  ldong_code.py  sync_update.py
src/storage/: mongodb.py
src/transformers/: categories.py  pois.py  pois_detail.py  regions.py
