[project]
name = "korea-festival-api-parser"
version = "0.1.0"
description = "한국관광공사 공공 API에서 축제/관광 데이터를 수신하고 변환하는 파서"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
